--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
   "name": "tilejson",
   "description": "Tile source backend for online tile sources",
-  "version": "1.0.2",
+  "version": "1.1.0",
   "author": "Mapbox (https://www.mapbox.com)",
   "license": "BSD",
   "contributors": [
-    "Konstantin Käfer <kkaefer@gmail.com>"
+    "Konstantin Käfer <kkaefer@gmail.com>",
+    "mcm-jyl"
   ],
   "dependencies": {
     "agentkeepalive": "2.0.2",
     "requestretry": "1.4.0",
-    "tiletype": "0.1.x"
+    "tiletype": "0.1.x" ,
+    "sphericalmercator" : "1.0.5"
   },
   "devDependencies": {
     "eslint": "^0.24.0",
