--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "mcm-jyl"
   ],
   "dependencies": {
-    "@mapbox/sphericalmercator": "1.0.5"
+    "@mapbox/sphericalmercator": "1.0.5",
     "@mapbox/tiletype": "~0.3.1",
     "agentkeepalive": "2.0.2",
     "requestretry": "^1.12.0"
